# AIO-Etsy-Stats

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
aio_etsy_stats/: main.py
src/: main.py
